# bytebucket

./: README.md  TODO.md
.github/: pull_request_template.md
.github/workflows/: backend.yml  catch2.yml
backend/: .gitignore  CMakeLists.txt  LEARNINGS.md  README.md  README.txt  TODO.md  dev.sh
backend/.github/workflows/: backend.yml
backend/db/: DATABASE.md  init.sql
backend/include/: database.hpp  file_storage.hpp  multipart_parser.hpp  request_handler.hpp
backend/src/: database.cpp  file_storage.cpp  main.cpp  multipart_parser.cpp  request_handler.cpp
backend/tests/: README.md  test_database_file_ops.cpp  test_database_folder_ops.cpp  test_database_init.cpp  test_database_metadata_ops.cpp  test_database_tags_ops.cpp  test_download_endpoint.cpp  test_file_storage.cpp  test_general.cpp  test_health_endpoint.cpp  test_helpers.hpp  test_helpers_database.hpp  test_multipart_parser.cpp  test_request_handler.cpp  test_root_endpoint.cpp  test_unknown_endpoints.cpp  test_upload_endpoint.cpp
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/api/: client.ts  index.ts  types.ts
frontend/src/components/: ActionBar.tsx  ErrorMessages.tsx  Header.tsx  NavigationBreadcrumb.tsx  UploadProgress.tsx
frontend/src/components/file-explorer/: FileExplorerGrid.tsx
frontend/src/components/modals/: CreateFolderModal.tsx
frontend/src/config/: env.ts
frontend/src/hooks/: index.ts  useApi.ts  useFileOperations.ts  useFolderNavigation.ts
frontend/src/util/: ui.ts
